--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -79,7 +79,7 @@
                         <form action="#" class="text-center" id="addForm">
                             <div class="form-group">
                                 <label for="addContent" class="col-form-label">Содержание</label>
-                                <textarea class="form-control" id="addContent"></textarea>
+                                <textarea class="form-control" id="addContent" placeholder="Напишите свой пост"></textarea>
                             </div>
                         </form>
                     </div>
@@ -108,7 +108,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-
 <script src="js/script.js"></script>
 </body>
 </html>
