- fixed reference in main.html

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -15,22 +15,22 @@
     <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-dark p-4">
             <h4 class="text-white">Приложение "Блоги"</h4>
-            <div class="text-muted">
-                <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели
-                    превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять
-                    голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого
-                    еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по
-                    сравнению с остальным телом ножки беспомощно копошились у него перед глазами. «Что со мной
-                    случилось?» – подумал он. Это не было сном. Его комната, настоящая, разве что слишком маленькая, но
-                    обычная комната, мирно покоилась в своих четырех хорошо знакомых стенах. Над столом, где были
-                    разложены распакованные образцы сукон – Замза был коммивояжером, – висел портрет, который он недавно
-                    вырезал из иллюстрированного журнала и вставил в красивую золоченую рамку. На портрете была
-                    изображена дама в меховой шляпе и боа, она сидела очень прямо и протягивала зрителю тяжелую меховую
-                    муфту, в которой целиком исчезала ее рука. Затем взгляд Грегора устремился в окно, и пасмурная
-                    погода – слышно было, как по жести подоконника стучат капли дождя – привела его и вовсе в грустное
-                    настроение. «Хорошо бы еще немного поспать и забыть всю эту чепуху», – подумал он, но это было
-                    совершенно неосуществимо, он привык спать на правом боку, а в теперешнем своем
-                </p>
+            <div class="container ml-0">
+                <h6 class="text-muted">краткая справка</h6>
+                <div class="text-white">
+                    <p>Приложение "Блоги" представляет собой стандартную ленту постов. Если посты отсутствуют, вы увидете
+                        сообщение "В данном блоге постов нет. Добавьте новый пост."</p>
+                    <p>Чтобы добавить новый пост нажмите на кнопку "Новый пост", впишите содержание и нажмите сохранить, для
+                        отмены нажмите отмена.</p>
+                    <p>Предусмотрено, что вы не можете сохранить пустой пост, пост содержащий пробелы или пост с количеством
+                        знаков более 200. В случае нарушения требований сохранения поста, на экране появляется
+                        соответствующее сообщение об ошибке. </p>
+                    <p>При сохранении, новый пост будет добавлен на вершину ленты. На странице единоразово может
+                        отоброжаться не более 5 постов. Чтобы просмотреть посты с более ранней датой, жмите "Далее".</p>
+                    <p>В случае если постов больше нет, вы увидете уведомление об этом и будет перенаправлены в начало
+                        списка</p>
+                    <p>Чтобы очистить ленту постов, нажмите на кнопку "Очистить"</p>
+                </div>
             </div>
         </div>
     </div>
@@ -79,7 +79,8 @@
                         <form action="#" class="text-center" id="addForm">
                             <div class="form-group">
                                 <label for="addContent" class="col-form-label">Содержание</label>
-                                <textarea class="form-control" id="addContent" placeholder="Напишите свой пост"></textarea>
+                                <textarea class="form-control" id="addContent"
+                                          placeholder="Напишите свой пост"></textarea>
                             </div>
                         </form>
                     </div>
